[package]
name = "distrust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8",  features = ["fs"] }
mime_guess = "2.0"
