[package]
name = "distrust"
version = "1.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.19.0", features = ["v4"] }
axum = { version = "0.8.8", features = ["multipart"] }
mime_guess = "2.0"
